Update Stopwatch.css Z-Index 1234567

--- a/Stopwatch/backend/public/Stopwatch.css
+++ b/Stopwatch/backend/public/Stopwatch.css
@@ -240,7 +240,7 @@
      width: 43px;
      height: 35px;
      border-radius: 50%;
-     z-index: 2;
+     z-index: 2000000;
      margin-top: -39%;
      margin-left: 7%;
     }
@@ -254,7 +254,7 @@
      margin-left: -36%;
      border:none;
      cursor: pointer;
-     z-index: 2;
+     z-index: 2000000;
     }
    
    .play-btn{
